--- a/Views/Manage/Shared/_ManageLayout.cshtml
+++ b/Views/Manage/Shared/_ManageLayout.cshtml
@@ -49,6 +49,8 @@
     <script type="text/javascript" src="~/js/manageJS/manageViewEmployeesList.js"></script>
     <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
+    } else if (action == "addemployee") {
+        <script type="text/javascript" src="~/js/manageJS/manageAddEmployee.js"></script>
     }}
 
 </body>
