--- a/Views/User/AccountInformation.cshtml
+++ b/Views/User/AccountInformation.cshtml
@@ -80,12 +80,6 @@
                         <tr id="ViewFavBook">
                             <td>My Favorite Book</td>
                         </tr>
-                        <tr>
-                            <td>I don't do anything</td>
-                        </tr>
-                        <tr>
-                            <td>Payment Options</td>
-                        </tr>
                     </tbody>
                     <!--Table body-->
 
@@ -106,15 +100,7 @@
                         </tr>
 
                         <tr>
-                            <td>Order History</td>
-                        </tr>
-
-                        <tr>
-                            <td>Cart</td>
-                        </tr>
-
-                        <tr>
-                            <td>Wish List</td>
+                            <td class="shipping-billing-button-style"><a asp-controller="User" asp-action="OrderHistory" class="shipping-billing-button-style">Order History</a></td>
                         </tr>
 
                     </tbody>
