--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -44,7 +44,10 @@
                         </p>
                     </div>
                     <div class="col-12">
-                        <p><strong>Rating: </strong><div class="rate h3 orange-text rate-off mb-0" data-rate-value=@Model.Rating></div></p>
+                        <p class="mb-0"><strong>Rating:</strong>
+                            <div class="rate h1 orange-text rate-off mb-0" data-rate-value=@Model.Rating></div>
+                        </p>
+                        
                     </div>
 
                     <div class="col-12 text-right my-0">
@@ -53,7 +56,7 @@
 
                     <div class="col-12 btn-group p-5">
                         <button type="button" class="btn btn-default btn-lg btn-block mr-2"><i class="fa fa-cart-plus fa-5x"></i> <br> Add to cart!</button>
-                        <button type="button" class="btn btn-pink btn-lg btn-block"><i class="fa fa-heart fa-5x"></i> <br> Set as favorite book!</button>
+                        <button id="setFavorite"type="button" class="btn btn-pink btn-lg btn-block"><i class="fa fa-heart fa-5x"></i> <br> Set as favorite book!</button>
                     </div>
                 </div>
             </div>
@@ -108,12 +111,12 @@
                             foreach(var review in @Model.Review)
                             {
                             <div class="row container">
-                                <div class="col-12">
+                                <div class="col-12 my-3">
                                     <div class="media">
-                                        <img class="d-flex rounded-circle avatar z-depth-1-half mr-3" src="https://mdbootstrap.com/img/Photos/Avatars/avatar-10.jpg" alt="Avatar">
+                                        <img class="d-flex rounded-circle avatar z-depth-1-half mr-3" src="data:image/jpg;base64, @Convert.ToBase64String(@review.ProfileImg)" alt="Avatar" width="80em" height="80em">
                                         <div class="media-body mb-3">
                                             <h4 class="my-0 font-weight-bold blue-text">@review.Reviewer</h4>
-                                            <div class="rate h1 orange-text rate-off mb-0" data-rate-value=@review.Rating></div>
+                                            <div class="rate h4 orange-text rate-off mb-0" data-rate-value=@review.Rating></div>
                                             @review.Review
                                             </div>
                                     </div>
@@ -138,10 +141,10 @@
                     <form class="media" method="POST" id="reviewForm">
                         <div class="media-body">
                             <div class="media mt-3 shadow-textarea">
-                                <img class="d-flex rounded-circle avatar z-depth-1-half mr-3" src="https://mdbootstrap.com/img/Photos/Avatars/avatar-8.jpg" alt="Generic placeholder image">
+                                <img class="d-flex rounded-circle avatar z-depth-1-half mr-3" src="https://mdbootstrap.com/img/Photos/Avatars/avatar-8.jpg" alt="Generic placeholder image" width="100em" height="100em">
                                 <div class="media-body">
                                     <h4 class="my-0 font-weight-bold blue-text pb-0">@nameClaim</h4>
-                                    <div id="userRating" class="rate h1 orange-text" data-rate-value="0"></div>
+                                    <div id="userRating" class="rate h1 orange-text" data-rate-value=null ></div>
                                     <div class="form-group basic-textarea rounded-corners">
                                         <textarea class="form-control z-depth-1" id="reviewText" rows="6" placeholder="Write your comment..."></textarea>
                                     </div>
