Made top 10 work, and fixes / adjustments in account info
Made book cover and "go to book" button both linked to correct book!

--- a/Views/Manage/Shared/_header.cshtml
+++ b/Views/Manage/Shared/_header.cshtml
@@ -10,13 +10,13 @@
 }
  
  <!-- SideNav slide-out button -->
-  <a href="#" data-activates="slide-out" class="btn btn-primary p-3 button-collapse mb-0 animated fadeInLeft">
+  <a href="#" data-activates="slide-out" class="btn btn-primary p-3 button-collapse mb-0 animated fadeIn">
       <i class="fa fa-bars"></i>
   </a>
 
 
   <!-- Sidebar navigation -->
-  <div id="slide-out" class="side-nav fixed sn-bg-2 animated fadeInLeft">
+  <div id="slide-out" class="side-nav fixed animated fadeIn sn-bg-2">
       <ul class="custom-scrollbar list-unstyled">              
             @if (SignInManager.IsSignedIn(User))
             {
