--- a/Views/User/AccountInformation.cshtml
+++ b/Views/User/AccountInformation.cshtml
@@ -151,7 +151,7 @@
 <!-- MODAL Favorite Book -->
 <div class="modal fade" id="modalFavoriteBook" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content" id="favorite-Book">
+        <div class="modal-content p-3" id="favorite-Book">
 
             <div class="row">
                 <div class="col un-center" id="FavoriteBookImg">
