--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -18,6 +18,8 @@
 
 <div class="container body-container">
 
+    <div class="d-none" id="bookIdStorage" data-bookId="@Model.BookId"></div>
+
     <div class="card container">
         <div class="card-body">
             <div class="row animated fadeIn">
@@ -148,7 +150,7 @@
                                     <div class="form-group basic-textarea rounded-corners">
                                         <textarea class="form-control z-depth-1" id="reviewText" rows="6" placeholder="Write your comment..."></textarea>
                                     </div>
-                                    <button type="button" data-bookId="@Model.BookId" id="submitReview" class="btn btn-primary pull-right mt-0 mr-0">Submit review!</button>
+                                    <button type="button" id="submitReview" class="btn btn-primary pull-right mt-0 mr-0">Submit review!</button>
                                 </div>
                             </div>
                         </div>
