--- a/Views/Book/Top10.cshtml
+++ b/Views/Book/Top10.cshtml
@@ -15,7 +15,7 @@
                     <div class="text-center">
                         <h2 class="display-3"><strong>1</strong></h2>
                         <hr>
-                        <img src="https://d1w7fb2mkkr3kw.cloudfront.net/assets/images/book/lrg/9780/0624/9780062457714.jpg" class="img-fluid z-depth-2" alt="">
+                        <img src="data:image/jpg;base64, @Convert.ToBase64String(@Model[0].CoverImage)" class="img-fluid z-depth-2" alt="">
                         <a>
                             <div class="mask rgba-white-slight"></div>
                         </a>
@@ -23,7 +23,20 @@
                     <div class="card-body text-center">
                         <hr>
                         <h4 class="card-title"><strong>@Model[0].Title</strong></h4>
-                        <h5>Web developer</h5>
+                        <h5>
+                            @foreach (var author in @Model[0].Author)
+                            {
+                            if (author != @Model[0].Author.Last())
+                            {
+                                <span>@author.Name, </span>
+                            }
+                            else
+                            {
+                                <span>@author.Name</span>
+                            }
+                        }
+
+                        </h5>
 
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt, quod quibusdam.
                         </p>
@@ -39,20 +52,32 @@
     <hr>
 
     <div class="row wow fadeInLeft">
-        <div class="col-6">
+        <div class="col-6 d-flex align-items-stretch">
             <div class="card card-cascade p-4">
                 <div class="text-center">
                     <h2 class="display-3"><strong>2</strong></h2>
                     <hr>
-                    <img src="https://d1w7fb2mkkr3kw.cloudfront.net/assets/images/book/lrg/9780/0624/9780062457714.jpg" class="img-fluid z-depth-2" alt="">
+                    <img src="data:image/jpg;base64, @Convert.ToBase64String(@Model[1].CoverImage)" class="img-fluid z-depth-2" alt="">
                     <a>
                         <div class="mask rgba-white-slight"></div>
                     </a>
                 </div>
                 <div class="card-body text-center">
                     <hr>
-                    <h4 class="card-title"><strong>Billy Cullen</strong></h4>
-                    <h5>Web developer</h5>
+                    <h4 class="card-title"><strong>@Model[1].Title</strong></h4>
+                    <h5>
+                        @foreach (var author in @Model[1].Author)
+                        {
+                            if (author != @Model[1].Author.Last())
+                            {
+                                <span>@author.Name, </span>
+                            }
+                            else
+                            {
+                                <span>@author.Name</span>
+                            }
+                        }
+                    </h5>
 
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt, quod quibusdam.
                     </p>
@@ -60,20 +85,32 @@
                 </div>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-6 d-flex align-items-stretch">
             <div class="card card-cascade p-4">
                 <div class="text-center">
                     <h2 class="display-3"><strong>3</strong></h2>
                     <hr>
-                    <img src="https://d1w7fb2mkkr3kw.cloudfront.net/assets/images/book/lrg/9780/0624/9780062457714.jpg" class="img-fluid z-depth-2" alt="">
+                    <img src="data:image/jpg;base64, @Convert.ToBase64String(@Model[2].CoverImage)" class="img-fluid z-depth-2" alt="">
                     <a>
                         <div class="mask rgba-white-slight"></div>
                     </a>
                 </div>
                 <div class="card-body text-center">
                     <hr>
-                    <h4 class="card-title"><strong>Billy Cullen</strong></h4>
-                    <h5>Web developer</h5>
+                    <h4 class="card-title"><strong>@Model[2].Title</strong></h4>
+                    <h5>
+                        @foreach (var author in @Model[2].Author)
+                        {
+                            if (author != @Model[2].Author.Last())
+                            {
+                                <span>@author.Name, </span>
+                            }
+                            else
+                            {
+                                <span>@author.Name</span>
+                            }
+                        }
+                    </h5>
 
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt, quod quibusdam.
                     </p>
@@ -86,20 +123,32 @@
     <hr>
 
     <div class="row wow fadeInRight">
-        <div class="col-4">
+        <div class="col-4 d-flex align-items-stretch">
             <div class="card card-cascade p-4">
                 <div class="text-center">
                     <h2 class="display-3"><strong>4</strong></h2>
                     <hr>
-                    <img src="https://d1w7fb2mkkr3kw.cloudfront.net/assets/images/book/lrg/9780/0624/9780062457714.jpg" class="img-fluid z-depth-2" alt="">
+                    <img src="data:image/jpg;base64, @Convert.ToBase64String(@Model[3].CoverImage)" class="img-fluid z-depth-2" alt="">
                     <a>
                         <div class="mask rgba-white-slight"></div>
                     </a>
                 </div>
                 <div class="card-body text-center">
                     <hr>
-                    <h4 class="card-title"><strong>Billy Cullen</strong></h4>
-                    <h5>Web developer</h5>
+                    <h4 class="card-title"><strong>@Model[3].Title</strong></h4>
+                    <h5>
+                        @foreach (var author in @Model[3].Author)
+                        {
+                            if (author != @Model[3].Author.Last())
+                            {
+                                <span>@author.Name, </span>
+                            }
+                            else
+                            {
+                                <span>@author.Name</span>
+                            }
+                        }
+                    </h5>
 
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt, quod quibusdam.
                     </p>
@@ -109,20 +158,32 @@
         </div>
 
 
-        <div class="col-4">
+        <div class="col-4 d-flex align-items-stretch">
             <div class="card card-cascade p-4">
                 <div class="text-center">
                     <h2 class="display-3"><strong>5</strong></h2>
                     <hr>
-                    <img src="https://d1w7fb2mkkr3kw.cloudfront.net/assets/images/book/lrg/9780/0624/9780062457714.jpg" class="img-fluid z-depth-2" alt="">
+                    <img src="data:image/jpg;base64, @Convert.ToBase64String(@Model[4].CoverImage)" class="img-fluid z-depth-2" alt="">
                     <a>
                         <div class="mask rgba-white-slight"></div>
                     </a>
                 </div>
                 <div class="card-body text-center">
                     <hr>
-                    <h4 class="card-title"><strong>Billy Cullen</strong></h4>
-                    <h5>Web developer</h5>
+                    <h4 class="card-title"><strong>@Model[4].Title</strong></h4>
+                    <h5>
+                        @foreach (var author in @Model[4].Author)
+                        {
+                            if (author != @Model[4].Author.Last())
+                            {
+                                <span>@author.Name, </span>
+                            }
+                            else
+                            {
+                                <span>@author.Name</span>
+                            }
+                        }
+                    </h5>
 
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt, quod quibusdam.
                     </p>
@@ -130,20 +191,32 @@
                 </div>
             </div>
         </div>
-        <div class="col-4">
+        <div class="col-4 d-flex align-items-stretch">
             <div class="card card-cascade p-4">
                 <div class="text-center">
                     <h2 class="display-3"><strong>6</strong></h2>
                     <hr>
-                    <img src="https://d1w7fb2mkkr3kw.cloudfront.net/assets/images/book/lrg/9780/0624/9780062457714.jpg" class="img-fluid z-depth-2" alt="">
+                    <img src="data:image/jpg;base64, @Convert.ToBase64String(@Model[5].CoverImage)" class="img-fluid z-depth-2" alt="">
                     <a>
                         <div class="mask rgba-white-slight"></div>
                     </a>
                 </div>
                 <div class="card-body text-center">
                     <hr>
-                    <h4 class="card-title"><strong>Billy Cullen</strong></h4>
-                    <h5>Web developer</h5>
+                    <h4 class="card-title"><strong>@Model[5].Title</strong></h4>
+                    <h5>
+                        @foreach (var author in @Model[5].Author)
+                        {
+                            if (author != @Model[5].Author.Last())
+                            {
+                                <span>@author.Name, </span>
+                            }
+                            else
+                            {
+                                <span>@author.Name</span>
+                            }
+                        }
+                    </h5>
 
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt, quod quibusdam.
                     </p>
@@ -156,20 +229,32 @@
     <hr>
 
     <div class="row wow fadeInUp">
-        <div class="col-3">
+        <div class="col-3 d-flex align-items-stretch">
             <div class="card card-cascade p-4">
                 <div class="text-center">
                     <h2 class="display-3"><strong>7</strong></h2>
                     <hr>
-                    <img src="https://d1w7fb2mkkr3kw.cloudfront.net/assets/images/book/lrg/9780/0624/9780062457714.jpg" class="img-fluid z-depth-2" alt="">
+                    <img src="data:image/jpg;base64, @Convert.ToBase64String(@Model[6].CoverImage)" class="img-fluid z-depth-2" alt="">
                     <a>
                         <div class="mask rgba-white-slight"></div>
                     </a>
                 </div>
                 <div class="card-body text-center">
                     <hr>
-                    <h4 class="card-title"><strong>Billy Cullen</strong></h4>
-                    <h5>Web developer</h5>
+                    <h4 class="card-title"><strong>@Model[6].Title</strong></h4>
+                    <h5>
+                        @foreach (var author in @Model[6].Author)
+                        {
+                            if (author != @Model[6].Author.Last())
+                            {
+                                <span>@author.Name, </span>
+                            }
+                            else
+                            {
+                                <span>@author.Name</span>
+                            }
+                        }
+                    </h5>
 
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt, quod quibusdam.
                     </p>
@@ -177,20 +262,32 @@
                 </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 d-flex align-items-stretch">
             <div class="card card-cascade p-4">
                 <div class="text-center">
                     <h2 class="display-3"><strong>8</strong></h2>
                     <hr>
-                    <img src="https://d1w7fb2mkkr3kw.cloudfront.net/assets/images/book/lrg/9780/0624/9780062457714.jpg" class="img-fluid z-depth-2" alt="">
+                    <img src="data:image/jpg;base64, @Convert.ToBase64String(@Model[7].CoverImage)" class="img-fluid z-depth-2" alt="">
                     <a>
                         <div class="mask rgba-white-slight"></div>
                     </a>
                 </div>
                 <div class="card-body text-center">
                     <hr>
-                    <h4 class="card-title"><strong>Billy Cullen</strong></h4>
-                    <h5>Web developer</h5>
+                    <h4 class="card-title"><strong>@Model[7].Title</strong></h4>
+                    <h5>                        
+                        @foreach (var author in @Model[7].Author)
+                        {
+                            if (author != @Model[7].Author.Last())
+                            {
+                                <span>@author.Name, </span>
+                            }
+                            else
+                            {
+                                <span>@author.Name</span>
+                            }
+                        }
+                        </h5>
 
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt, quod quibusdam.
                     </p>
@@ -198,20 +295,32 @@
                 </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 d-flex align-items-stretch">
             <div class="card card-cascade p-4">
                 <div class="text-center">
                     <h2 class="display-3"><strong>9</strong></h2>
                     <hr>
-                    <img src="https://d1w7fb2mkkr3kw.cloudfront.net/assets/images/book/lrg/9780/0624/9780062457714.jpg" class="img-fluid z-depth-2" alt="">
+                    <img src="data:image/jpg;base64, @Convert.ToBase64String(@Model[8].CoverImage)" class="img-fluid z-depth-2" alt="">
                     <a>
                         <div class="mask rgba-white-slight"></div>
                     </a>
                 </div>
                 <div class="card-body text-center">
                     <hr>
-                    <h4 class="card-title"><strong>Billy Cullen</strong></h4>
-                    <h5>Web developer</h5>
+                    <h4 class="card-title"><strong>@Model[8].Title</strong></h4>
+                    <h5>                        
+                        @foreach (var author in @Model[8].Author)
+                        {
+                            if (author != @Model[8].Author.Last())
+                            {
+                                <span>@author.Name, </span>
+                            }
+                            else
+                            {
+                                <span>@author.Name</span>
+                            }
+                        }
+                        </h5>
 
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt, quod quibusdam.
                     </p>
@@ -219,20 +328,32 @@
                 </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 d-flex align-items-stretch">
             <div class="card card-cascade p-4">
                 <div class="text-center">
                     <h2 class="display-3"><strong>10</strong></h2>
                     <hr>
-                    <img src="https://d1w7fb2mkkr3kw.cloudfront.net/assets/images/book/lrg/9780/0624/9780062457714.jpg" class="img-fluid z-depth-2" alt="">
+                    <img src="data:image/jpg;base64, @Convert.ToBase64String(@Model[9].CoverImage)" class="img-fluid z-depth-2" alt="">
                     <a>
                         <div class="mask rgba-white-slight"></div>
                     </a>
                 </div>
                 <div class="card-body text-center">
                     <hr>
-                    <h4 class="card-title"><strong>Billy Cullen</strong></h4>
-                    <h5>Web developer</h5>
+                    <h4 class="card-title"><strong>@Model[9].Title</strong></h4>
+                    <h5>                   
+                        @foreach (var author in @Model[9].Author)
+                        {
+                            if (author != @Model[9].Author.Last())
+                            {
+                                <span>@author.Name, </span>
+                            }
+                            else
+                            {
+                                <span>and @author.Name</span>
+                            }
+                        }
+                        </h5>
 
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, ex, recusandae. Facere modi sunt, quod quibusdam.
                     </p>
