--- a/Views/CheckOut/Index.cshtml
+++ b/Views/CheckOut/Index.cshtml
@@ -4,13 +4,13 @@
     <div id="toTop" class="steps-form-2">
         <div class="steps-row-2 setup-panel-2 d-flex justify-content-between">
             <div class="steps-step-2">
-                <a href="#step-1" id="navstep1" type="button" class="btn btn-amber btn-circle-2 waves-effect ml-0" data-toggle="tooltip" data-placement="top" title="Basic Information"><i class="fa fa-address-card" aria-hidden="true"></i></a>
+                <a href="#step-1" type="button" class="btn btn-amber btn-circle-2 waves-effect ml-0" data-toggle="tooltip" data-placement="top" title="Basic Information"><i class="fa fa-address-card" aria-hidden="true"></i></a>
             </div>
             <div class="steps-step-2">
-                <a href="#step-2" id="navstep1" type="button" class="btn btn-blue-grey btn-circle-2 waves-effect disabled" data-toggle="tooltip" data-placement="top" title="Personal Data"><i class="fa fa-eye" aria-hidden="true"></i></a>
+                <a href="#step-2" type="button" class="btn btn-blue-grey btn-circle-2 waves-effect disabled" data-toggle="tooltip" data-placement="top" title="Personal Data"><i class="fa fa-eye" aria-hidden="true"></i></a>
             </div>
             <div class="steps-step-2">
-                <a href="#step-3" id="navstep1" type="button" class="btn btn-blue-grey btn-circle-2 waves-effect mr-0 disabled" data-toggle="tooltip" data-placement="top" title="Terms and Conditions"><i class="fa fa-check" aria-hidden="true"></i></a>
+                <a href="#step-3" type="button" class="btn btn-blue-grey btn-circle-2 waves-effect mr-0 disabled" data-toggle="tooltip" data-placement="top" title="Terms and Conditions"><i class="fa fa-check" aria-hidden="true"></i></a>
             </div>
         </div>
     </div>
@@ -59,7 +59,10 @@
 
                 <div class="form-group mt-2">
                     <label for="ShippingCountry" data-error="wrong" data-success="right">Country</label>
-                    <input type="text" id="ShippingCountry" asp-for="ShippingCountry" class="form-control validate" required>
+                    <select class="mdb-select colorful-select dropdown-primary validate" asp-for="ShippingCountry"  id="ShippingCountry" multiple searchable="Search here..">
+                        
+                    </select>
+                    <button class="btn-save btn btn-primary btn-sm">Save</button>
                 </div>
                 
                 
@@ -106,7 +109,9 @@
                 </div>
                 <div class="form-group mt-2">
                     <label for="BillingCountry" data-error="wrong" data-success="right">Country</label>
-                    <input type="text" id="BillingCountry" asp-for="BillingCountry" class="form-control validate billing-information" required>
+                    <select class="mdb-select colorful-select dropdown-primary validate BillingCountrySelect" asp-for="BillingCountry"  id="BillingCountry" multiple searchable="Search here..">
+                        
+                    </select>
                 </div>
             </div>
 
@@ -332,7 +337,7 @@
                 <button class="btn btn-mdb-color btn-rounded prevBtn-2 float-left" type="button">Previous</button>
             </div>
             <div class="col-md-4 offset-md-8">
-                <button class="btn btn-success btn-rounded nextBtn-2 float-right" id="pay" type="button">Pay Now</button>
+                <button class="btn btn-mdb-color btn-rounded nextBtn-2 float-right" id="pay" type="button">Pay Now</button>
             </div>
         </div>
     </div>
@@ -340,10 +345,21 @@
     <!-- Third Step -->
     <div class="row setup-content-2" id="step-3">
         <div class="col-md-12">
-            <h3 class="font-weight-bold pl-0 my-4"><strong>Finish</strong></h3>
-            <h2 class="text-center font-weight-bold my-4">Registration completed!</h2>
-            <button class="btn btn-mdb-color btn-rounded prevBtn-2 float-left" type="button">Previous</button>
-            <button class="btn btn-success btn-rounded float-right" type="submit">Submit</button>
+            <!-- Card -->
+            <div class="card card-image mb-3" style="background-image: url(https://www.kameronhurley.com/wp-content/uploads/2016/09/books.jpg);">
+
+            <!-- Content -->
+                <div class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
+                    <div class="col mt-5 mb-5">
+                        <h5 class="blue-text"><i class="fa fa-book"></i> Book Cave</h5>
+                        <h3 class="card-title pt-2"><strong>Purchase was successful</strong></h3>
+                        <p>We thank you for your purchase and hope to see you again soon!</p>
+                        <a asp-controller="Home" class="btn btn-blue"><i class="fa fa-home left"></i>Back to Home</a>
+                    </div>
+                </div>
+                <!-- Content -->
+            </div>
+            <!-- Card -->
         </div>
     </div>
 </form>
