Changed layout in managelayout
Shared file, so i pushed right away

--- a/Views/Manage/Shared/_ManageLayout.cshtml
+++ b/Views/Manage/Shared/_ManageLayout.cshtml
@@ -51,6 +51,8 @@
     <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
     } else if (action == "addemployee") {
         <script type="text/javascript" src="~/js/manageJS/manageAddEmployee.js"></script>
+    } else if (action == "changepassword") {
+        <script type="text/javascript" src="~/js/manageJS/manageChangePassword.js"></script>
     }}
 
 </body>
