--- a/Views/Manage/ChangePassword.cshtml
+++ b/Views/Manage/ChangePassword.cshtml
@@ -10,26 +10,26 @@
             <div class="form-group row d-flex">
                 <p class="label col-md-4 pt-2 form-control-lg">Current password</p>
                 <div class="col-md-8">
-                    <input class="form-control pt-0 form-lg form-control-lg" name="currentPassword" type="text">
+                    <input id="oldPassword" class="form-control pt-0 form-lg form-control-lg" name="currentPassword" type="password" required>
                 </div>
             </div>
 
             <div class="form-group row d-flex">
                 <p class="label col-md-4 pt-2 form-control-lg">New password</p>
                 <div class="col-md-8">
-                    <input class="form-control pt-0 form-lg form-control-lg" name="newPassword" type="text">
+                    <input id="newPassword" class="form-control pt-0 form-lg form-control-lg" name="newPassword" type="password" required>
                 </div>
             </div>
 
             <div class="form-group row d-flex">
                 <p class="label col-md-4 pt-2 form-control-lg">Confirm new password</p>
                 <div class="col-md-8">
-                    <input class="form-control pt-0 form-control-lg" name="confirmPassword" type="text">
+                    <input id="confirmPassword" class="form-control pt-0 form-control-lg" name="confirmPassword" type="password" required>
                 </div>
             </div>        
 
           <div class="text-right mb-5 pb-5">
-            <button type="button" class="btn btn-danger waves-light">Cancel</button>
+            <button id="cancel" type="button" class="btn btn-danger waves-light">Cancel</button>
             <button id="submitEmployeeChangePassword" type="button" class="btn success-color-dark waves-light">Create employee</button>
           </div>
           
@@ -38,15 +38,6 @@
       </div>
     </div>
   </div>
-
-
-
-
-
-
-
-
-
   
 <!-- Modal while waiting for confirmation -->
 <div class="modal fade" id="waitingModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -55,7 +46,7 @@
         <div class="modal-content">
             <!--Header-->
             <div class="modal-header">
-                <p class="heading lead text-center">Waiting for response...</p>
+                <p class="heading lead text-center">Changing Password...</p>
             </div>
 
             <div class="text-center m-5 p-5">
@@ -81,14 +72,14 @@
 <!-- End of waiting modal -->
 
 
-<!-- Success delete modal -->
+<!-- Success Update modal -->
 <div class="modal fade" id="successModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-notify modal-success" role="document">
         <!--Content-->
         <div class="modal-content">
             <!--Header-->
             <div class="modal-header">
-                <p class="heading lead">Modal Success</p>
+                <p class="heading lead">Update Success</p>
 
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true" class="white-text">&times;</span>
@@ -99,19 +90,19 @@
             <div class="modal-body">
                 <div class="text-center">
                     <i class="fa fa-check fa-4x mb-3 animated rotateIn"></i>
-                    <p>Book has been successfully deleted!</p>
+                    <p>Password has been updated successfully!</p>
                 </div>
             </div>
 
             <div class="modal-footer justify-content-center">
-                <a type="button" class="btn btn-primary">Close!</a>
+                <a type="button" class="btn btn-primary" data-dismiss="modal">Close!</a>
             </div>
 
         </div>
         <!--/.Content-->
     </div>
 </div>
-
+<!-- Success Update modal -->
 
 <!-- Failed to delete modal -->
 <div class="modal fade left" id="errorModalChangePassword" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -133,7 +124,7 @@
                 <div class="row">
                     <div class="text-center">
                         <p><strong>Something went wrong!</strong></p>
-                        <p>There was an error in the server when attempting to delete this book</p>
+                        <p>Did you input the correct information?</p>
                     </div>
                 </div>
             </div>
