--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -177,6 +177,9 @@ header,
     max-height: 200px;
     width: auto;
     max-width: 200px;
+
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .align-div-right {
