--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,215 +1,210 @@
-﻿
-  <!--Carousel Wrapper-->
-    <div id="carousel-example-1z" class="carousel slide carousel-fade animated fadeIn" data-ride="carousel">
+﻿<!--Carousel Wrapper-->
+<div id="carousel-example-1z" class="carousel slide carousel-fade animated fadeIn" data-ride="carousel">
 
-      <!--Indicators-->
-      <ol class="carousel-indicators">
+    <!--Indicators-->
+    <ol class="carousel-indicators">
         <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-example-1z" data-slide-to="1"></li>
         <li data-target="#carousel-example-1z" data-slide-to="2"></li>
-      </ol>
-      <!--/.Indicators-->
+    </ol>
+    <!--/.Indicators-->
 
-      <!--Slides-->
-      <div class="carousel-inner" role="listbox">
+    <!--Slides-->
+    <div class="carousel-inner" role="listbox">
 
         <!--First slide-->
         <div class="carousel-item active">
-          <div class="view" style="background-image: url('http://www.katlatrack.is/wp-content/uploads/2016/12/CAV_9200.jpg'); background-repeat: no-repeat; background-size: cover;">
+            <div class="view" style="background-image: url('http://www.katlatrack.is/wp-content/uploads/2016/12/CAV_9200.jpg'); background-repeat: no-repeat; background-size: cover;">
 
-            <!-- Mask & flexbox options-->
-            <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
+                <!-- Mask & flexbox options-->
+                <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
 
-              <!-- Content -->
-              <div class="text-center white-text mx-5 wow fadeIn">
-                <h1 class="mb-4">
-                  <strong>Welcome to the BookCave</strong>
-                </h1>
+                    <!-- Content -->
+                    <div class="text-center white-text mx-5 wow fadeIn">
+                        <h1 class="mb-4">
+                            <strong>Welcome to the BookCave</strong>
+                        </h1>
 
-                <p>
-                  <strong>Probably the best book store online!</strong>
-                </p>
+                        <p>
+                            <strong>Probably the best book store online!</strong>
+                        </p>
 
-                <p class="mb-4 d-none d-md-block">
-                  <strong>We hope you enjoy your stay in our cave.</strong>
-                </p>
+                        <p class="mb-4 d-none d-md-block">
+                            <strong>We hope you enjoy your stay in our cave.</strong>
+                        </p>
 
-              </div>
-              <!-- Content -->
+                    </div>
+                    <!-- Content -->
+
+                </div>
+                <!-- Mask & flexbox options-->
 
             </div>
-            <!-- Mask & flexbox options-->
-
-          </div>
         </div>
         <!--/First slide-->
 
         <!--Second slide-->
         <div class="carousel-item">
-          <div class="view" style="background-image: url('https://cdn.aarp.net/content/dam/aarp/money/budgeting_savings/2016/04/1140-yeager-sell-your-used-books.imgcache.rev6feda141288df73e8fd100822bb375ea.web.652.375.jpg'); background-repeat: no-repeat; background-size: cover;">
+            <div class="view" style="background-image: url('https://cdn.aarp.net/content/dam/aarp/money/budgeting_savings/2016/04/1140-yeager-sell-your-used-books.imgcache.rev6feda141288df73e8fd100822bb375ea.web.652.375.jpg'); background-repeat: no-repeat; background-size: cover;">
 
-            <!-- Mask & flexbox options-->
-            <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
+                <!-- Mask & flexbox options-->
+                <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
 
-              <!-- Content -->
-              <div class="text-center white-text mx-5 wow fadeIn">
-                <h1 class="mb-4">
-                  <strong>Top Sellers!</strong>
-                </h1>
+                    <!-- Content -->
+                    <div class="text-center white-text mx-5 wow fadeIn">
+                        <h1 class="mb-4">
+                            <strong>Top Sellers!</strong>
+                        </h1>
 
-                <p>
-                  <strong>See our list of top sold books!</strong>
-                </p>
+                        <p>
+                            <strong>See our list of top sold books!</strong>
+                        </p>
 
-                <p class="mb-4 d-none d-md-block">
-                </p>
+                        <p class="mb-4 d-none d-md-block">
+                        </p>
 
-              </div>
-              <!-- Content -->
+                    </div>
+                    <!-- Content -->
+
+                </div>
+                <!-- Mask & flexbox options-->
 
             </div>
-            <!-- Mask & flexbox options-->
-
-          </div>
         </div>
         <!--/Second slide-->
 
         <!--Third slide-->
         <div class="carousel-item">
-          <div class="view" style="background-image: url('http://www.inthestreets.tv/wp-content/uploads/2014/01/HOT-NEW-RELEASE-FLAT.jpg'); background-repeat: no-repeat; background-size: cover;">
+            <div class="view" style="background-image: url('http://www.inthestreets.tv/wp-content/uploads/2014/01/HOT-NEW-RELEASE-FLAT.jpg'); background-repeat: no-repeat; background-size: cover;">
 
-            <!-- Mask & flexbox options-->
-            <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
+                <!-- Mask & flexbox options-->
+                <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
 
-              <!-- Content -->
-              <div class="text-center white-text mx-5 wow fadeIn">
-                <h1 class="mb-4">
-                  <strong>Newest releases!</strong>
-                </h1>
+                    <!-- Content -->
+                    <div class="text-center white-text mx-5 wow fadeIn">
+                        <h1 class="mb-4">
+                            <strong>Newest releases!</strong>
+                        </h1>
 
-                <p>
-                  <strong>BSee our most new books</strong>
-                </p>
+                        <p>
+                            <strong>BSee our most new books</strong>
+                        </p>
 
-              </div>
-              <!-- Content -->
+                    </div>
+                    <!-- Content -->
+
+                </div>
+                <!-- Mask & flexbox options-->
 
             </div>
-            <!-- Mask & flexbox options-->
-
-          </div>
         </div>
         <!--/Third slide-->
 
-      </div>
-      <!--/.Slides-->
+    </div>
+    <!--/.Slides-->
 
-      <!--Controls-->
-      <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
+    <!--Controls-->
+    <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-      <!--/.Controls-->
-    </div>
-    <!--/.Carousel Wrapper-->
+    <!--/.Controls-->
+</div>
+<!--/.Carousel Wrapper-->
 
-  <!--Main layout-->
-  <main class="pt-0">
+<!--Main layout-->
+<main class="pt-0">
     <div class="container">
 
-      <!--Section: banner-->
-      <section class="button-container wow fadeIn">
-        <!--Grid row-->
-        <div class="row wow fadeIn">
-          <!--Grid column-->
-          <div class="banner text-center">
-            <p><strong>Some commercial <small class="text-muted">from an awesome publisher</small></strong></p>
-          </div>
-          <!--Grid column-->
-        </div>
-        <!--Grid row-->
-      </section>
-      <!--Section: Buttons-->
+        <div class="row mt-5 wow fadeIn">
+            <!-- Card -->
+            <div class="col">
+                <div class="card">
 
-        
-      <div class="row wow fadeIn">
-        <!-- Card -->
-        <div class="col">
-          <div class="card">
+                    <!-- Card image -->
+                    <img class="card-img-top" src="https://jagsecure-johnandgingerltd.netdna-ssl.com/uploads/panels-jg/panel-special-offers.jpg" alt="Card image cap">
 
-            <!-- Card image -->
-            <img class="card-img-top" src="https://jagsecure-johnandgingerltd.netdna-ssl.com/uploads/panels-jg/panel-special-offers.jpg" alt="Card image cap">
+                    <!-- Card content -->
+                    <div class="card-body">
 
-            <!-- Card content -->
-            <div class="card-body">
+                        <!-- Title -->
+                        <h4 class="card-title"><a>View all books</a></h4>
+                        <!-- Text -->
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <!-- Button -->
+                        <a href="#" class="btn btn-primary">Button</a>
 
-              <!-- Title -->
-              <h4 class="card-title"><a>Offers</a></h4>
-              <!-- Text -->
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <!-- Button -->
-              <a href="#" class="btn btn-primary">Button</a>
+                    </div>
 
+                </div>
+                <!-- Card -->
             </div>
 
-          </div>
-          <!-- Card -->
-        </div>
+            <div class="col">
+                <!-- Card 2 -->
+                <div class="card">
 
-        <div class="col">
-        <!-- Card 2 -->
-          <div class="card">
+                    <!-- Card image -->
+                    <img class="card-img-top" src="https://jagsecure-johnandgingerltd.netdna-ssl.com/uploads/panels-jg/panel-special-offers.jpg" alt="Card image cap">
 
-            <!-- Card image -->
-            <img class="card-img-top" src="https://jagsecure-johnandgingerltd.netdna-ssl.com/uploads/panels-jg/panel-special-offers.jpg" alt="Card image cap">
+                    <!-- Card content -->
+                    <div class="card-body">
 
-            <!-- Card content -->
-            <div class="card-body">
+                        <!-- Title -->
+                        <h4 class="card-title"><a>Search Books</a></h4>
+                        <!-- Text -->
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <!-- Button -->
+                        <a href="#" class="btn btn-primary">Button</a>
 
-              <!-- Title -->
-              <h4 class="card-title"><a>Search Books</a></h4>
-              <!-- Text -->
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <!-- Button -->
-              <a href="#" class="btn btn-primary">Button</a>
+                    </div>
 
+                </div>
             </div>
+            <!-- Card 2 -->
 
-          </div>
-        </div>
-        <!-- Card 2 -->
+            <div class="col">
+                <!-- Card 3 -->
+                <div class="card">
 
-        <div class="col">
-          <!-- Card 3 -->
-          <div class="card">
+                    <!-- Card image -->
+                    <img class="card-img-top" src="https://jagsecure-johnandgingerltd.netdna-ssl.com/uploads/panels-jg/panel-special-offers.jpg" alt="Card image cap">
 
-            <!-- Card image -->
-            <img class="card-img-top" src="https://jagsecure-johnandgingerltd.netdna-ssl.com/uploads/panels-jg/panel-special-offers.jpg" alt="Card image cap">
+                    <!-- Card content -->
+                    <div class="card-body">
+                        @{
+                            if (User.Identity.IsAuthenticated)
+                            {
+                                <a class="dropdown-item waves-light" asp-controller="User" asp-action="AccountInformation"><i class="fa fa-vcard" aria-hidden="true"></i> Account Information</a>
+                                <div class="divider dropdown-divider"></div>
+                                <a class="dropdown-item waves-light" asp-controller="User" asp-action="LogOut"><i class="fa fa-sign-out" aria-hidden="true"></i> Sign Out</a>
+                            } else {
+                                <!-- Title -->
+                                <h4 class="card-title"><a>Your profile</a></h4>
+                                <!-- Text -->
+                                <p class="card-text">You need to be logged in to go to profile</p>
+                                <!-- button &apos; -->
+                                <a asp-controller="User" asp-action="Login" class="btn btn-primary">Sign In</a>
+                                <a asp-controller="User" asp-action="SignUp" class="btn btn-primary">Sign Up</a>
+                            }
+                        }
+                        
+                        
 
-            <!-- Card content -->
-            <div class="card-body">
+                    </div>
 
-              <!-- Title -->
-              <h4 class="card-title"><a>View Categories</a></h4>
-              <!-- Text -->
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <!-- Button -->
-              <a href="#" class="btn btn-primary">Button</a>
-
+                </div>
+                <!-- Card 3-->
             </div>
-
-          </div>
-          <!-- Card 3-->
         </div>
-      </div>
 
-      </section>
-      <!--Section: Buttons-->
+        </section>
+        <!--Section: Buttons-->
 
     </div>
-  </main>
-  <!--Main layout-->
+</main>
+<!--Main layout-->
